--- a/main.html
+++ b/main.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  </head>
-  <body>
-    Enter your name: <input type="text" id="fname">
-	
-	<script type="text/javascript" src="./script.js">
-	</script>
-  </body>
+<head>
+  <title>Uppercase Input</title>
+  <script src="script.js" defer></script>
+</head>
+<body>
+  <label for="fname">Name:</label>
+  <input type="text" id="fname" name="fname">
+</body>
 </html>
